# weather

./: README.md  main.py  pyproject.toml  requirements.txt
data/: cities_timezone.json
weather/: foliumm_utils.py  get_city_local_time.py  json_utils.py  local_timezone.py
