[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
requests = "^2.32.3"
timezonefinder = "^6.5.7"
datetime = "^5.5"
pytz = "^2024.2"
geopy = "^2.4.1"
folium = "^0.19.4"
streamlit-folium = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
